# flutter-tui-tools

./: .gitignore  Cargo.toml
src/: app_state.rs  flutter_daemon.rs  logger.rs  main.rs  vm_service.rs
src/ui/: debugger.rs  details.rs  mod.rs  tree.rs
