[package]
name = "flutter_tui_tools"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.29.0"
tokio = { version = "1.41.1", features = ["full"] }
futures = "0.3.31"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = { version = "1.0.133", features = ["unbounded_depth"] }
tokio-tungstenite = { version = "0.24.0", features = ["native-tls"] }
crossterm = "0.28.1"
anyhow = "1.0.93"
clap = { version = "4.5.21", features = ["derive"] }
regex = "1.11.1"
tui-tree-widget = "0.19.0"
log = { version = "0.4.22", features = ["std"] }
unicode-width = "0.2.0"
fuzzy-matcher = "0.3.7"
notify = "8.2.0"
ignore = "0.4.25"

